# btg-case

./: README.md  main.ipynb  main.py  pyproject.toml
